@@ -28,5 +28,8 @@ background no
 # auto-reconnect if server fails?
 autoreconnect yes
 
+# block spy packets sent by the client?
+antispy yes
+
 # fake a client version?
 #client_version "9.8.7z"
